--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,15 @@
   "name": "sanity-gatsby-blog-web",
   "version": "1.0.5",
   "author": "Sanity <hello@sanity.io>",
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components",
+      "config": "tailwind.config.js",
+      "debugProp": true,
+      "debugPlugins": false,
+      "debug": false
+    }
+  },
   "scripts": {
     "build": "gatsby build",
     "clean-cache": "gatsby clean",
@@ -24,18 +33,27 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.0",
-    "gatsby": "^2.9.2",
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-source-sanity": "^4.0.3",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.6.0",
     "prettier-eslint-cli": "^4.7.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1"
   },
   "dependencies": {
-    "gatsby-image": "^2.0.41"
+    "gatsby": "^2.26.1",
+    "gatsby-image": "^2.0.41",
+    "gatsby-plugin-styled-components": "^3.5.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
+    "twin.macro": "^2.0.4",
+    "@tailwindcss/ui": "^0.7.2",
+    "fontsource-cooper-hewitt": "^3.0.2",
+    "typeface-cardo": "^1.1.13",
+    "typeface-domine": "^1.1.13",
+    "typeface-lato": "^1.1.13",
+    "typeface-roboto": "^1.1.13"
   }
 }
