--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "twin": {
       "preset": "styled-components",
       "config": "tailwind.config.js",
-      "debugProp": true,
+      "dataTWProp": true,
       "debugPlugins": false,
       "debug": false
     }
@@ -23,32 +23,33 @@
   "devDependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^0.140.19",
-    "date-fns": "^1.30.1",
-    "dotenv": "^8.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "gatsby-plugin-postcss": "^2.0.7",
-    "gatsby-plugin-react-helmet": "^3.2.4",
-    "gatsby-source-sanity": "^4.0.3",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.6.0",
-    "prettier-eslint-cli": "^4.7.1",
-    "react-helmet": "^5.2.1"
+    "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.15.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^5.0.0",
+    "gatsby-plugin-postcss": "^3.3.0",
+    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-source-sanity": "^6.0.4",
+    "postcss": "^8.2.0",
+    "postcss-import": "^13.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "prettier-eslint-cli": "^5.0.0",
+    "react-helmet": "^6.1.0"
   },
   "dependencies": {
-    "gatsby": "^2.26.1",
-    "gatsby-image": "^2.0.41",
-    "gatsby-plugin-styled-components": "^3.5.0",
+    "gatsby": "^2.28.1",
+    "gatsby-image": "^2.7.0",
+    "gatsby-plugin-styled-components": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1",
-    "twin.macro": "^2.0.4",
+    "twin.macro": "^2.0.5",
     "@tailwindcss/ui": "^0.7.2",
     "fontsource-cooper-hewitt": "^3.0.2",
     "typeface-cardo": "^1.1.13",
