--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "discord.enabled": true
+    "discord.enabled": false,
+    "terminal.integrated.env.osx": {
+    
+    },
+    "terminal.integrated.minimumContrastRatio": 4.5,
+    "terminal.integrated.fontFamily": "MesloLGS NF"
 }
