--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "lerna run build --parallel",
     "dev": "lerna run dev --parallel",
+    "start": "npm run dev",
     "format": "lerna run format",
     "build-studio": "lerna bootstrap && cd studio && npm run build",
     "build-web": "lerna bootstrap && (cd studio && SANITY_AUTH_TOKEN=$SANITY_DEPLOY_STUDIO_TOKEN npm run graphql-deploy) && (cd web && npm run build)",
@@ -15,6 +16,8 @@
   },
   "devDependencies": {
     "@sanity/cli": "^2.0.0",
+    "eslint": "^7.15.0",
+    "eslint-plugin-react": "^7.21.5",
     "lerna": "^3.13.1"
   }
 }
